--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -7,3 +7,4 @@ conditionally-include-linux_version.h.patch
 include-swiotlb-header-on-arm.patch
 ignore_xen_on_arm.patch
 seq-printf.patch
+arm-outer-sync.patch
