Add patch to fix kernel 4.3 armhf build failure
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5616 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -5,3 +5,4 @@ conditionally-include-linux_version.h.patch
 #HAS_UVM#uvm-symvers.patch
 ignore_xen_on_arm.patch
 seq-printf.patch
+arm-outer-sync.patch
