reroute all kernel module dependencies through nvidia-kernel-support
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5625 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/control.template.in
+++ b/debian/module/debian/control.template.in
@@ -11,8 +11,7 @@ Package: #NVIDIA#-kernel-#KVERS#
 Architecture: i386 amd64
 Provides: #NVIDIA#-kernel-#VERSION#
 Depends:
- nvidia-kernel-common (>= 20110213),
- #NVIDIA_ALTERNATIVE#--kmod-alias,
+ #NVIDIA#-kernel-support--v1,
 Recommends: linux-image-#KVERS#
 Built-Using: ${built:using:kernel}, ${built:using:nvidia}
 Description: NVIDIA binary kernel module for Linux #KVERS#
