--- a/debian/control
+++ b/debian/control
@@ -314,8 +314,11 @@ Architecture: i386 amd64 armhf
 Multi-Arch: foreign
 Depends:
  ${nvidia-alternative} (= ${binary:Version}),
+ ${nvidia-alternative}--kmod-alias,
  nvidia-kernel-common (>= 20110213),
  ${misc:Depends}
+Provides:
+ ${nvidia}-kernel-support--v1,
 Description: NVIDIA binary kernel module support files${nvidia:LegacyDesc}
  The NVIDIA binary drivers provide optimized hardware acceleration of
  OpenGL applications via a direct-rendering X Server for graphics cards
@@ -333,9 +336,7 @@ Pre-Depends:
  nvidia-installer-cleanup,
 Depends:
  dkms,
- ${nvidia}-kernel-support,
- nvidia-kernel-common (>= 20110213),
- ${nvidia-alternative}--kmod-alias,
+ ${nvidia}-kernel-support--v1,
  ${misc:Depends}
 Recommends:
  ${nvidia}-driver (>= ${nvidia:Version}) | ${libcuda1} (>= ${nvidia:Version}),
@@ -372,8 +373,7 @@ Depends:
  ${misc:Depends}
 Recommends:
  module-assistant | kernel-package,
- nvidia-kernel-common,
- ${nvidia-alternative}--kmod-alias,
+ nvidia-kernel-support,
 Suggests:
  ${nvidia}-driver (>= ${nvidia:Version}),
 Breaks:
