Update dkms, modprobe.conf and rules for new nvidia-modeset kernel module
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/358@5630 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-kernel-dkms.dkms.in
+++ b/debian/nvidia-kernel-dkms.dkms.in
@@ -13,6 +13,10 @@ MAKE[0]="env CCACHE_DISABLE=1 NV_VERBOSE=1 \
     make -C . SYSSRC=${kernel_source_dir} modules"
 CLEAN="make -C . SYSSRC=${kernel_source_dir} clean"
 
-#HAS_UVM#BUILT_MODULE_NAME[1]="nvidia-uvm"
-#HAS_UVM#DEST_MODULE_NAME[1]="nvidia-uvm"
-#HAS_UVM#DEST_MODULE_LOCATION[1]="/updates/dkms"
+BUILT_MODULE_NAME[1]="nvidia-modeset"
+DEST_MODULE_NAME[1]="nvidia-modeset"
+DEST_MODULE_LOCATION[1]="/updates/dkms"
+
+#HAS_UVM#BUILT_MODULE_NAME[2]="nvidia-uvm"
+#HAS_UVM#DEST_MODULE_NAME[2]="nvidia-uvm"
+#HAS_UVM#DEST_MODULE_LOCATION[2]="/updates/dkms"
