manage nvidia-load.conf via nvidia-alternative
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5636 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -320,6 +320,10 @@ Depends:
  ${misc:Depends}
 Provides:
  ${nvidia}-kernel-support--v1,
+Breaks:
+# glx-alternative-nvidia (<< 0.6.91),
+Replaces:
+# glx-alternative-nvidia (<< 0.6.91),
 Description: NVIDIA binary kernel module support files${nvidia:LegacyDesc}
  The NVIDIA binary drivers provide optimized hardware acceleration of
  OpenGL applications via a direct-rendering X Server for graphics cards
