--- a/debian/nvidia-alternative.lintian-overrides.in
+++ b/debian/nvidia-alternative.lintian-overrides.in
@@ -2,6 +2,7 @@
 package-contains-empty-directory usr/lib/#PRIVATE#/
 
 # Slave alternatives may be installed there.
+package-contains-empty-directory #LIBDIR#/nvidia/
 package-contains-empty-directory #LIBDIR#/vdpau/
 package-contains-empty-directory usr/share/applications/
 package-contains-empty-directory usr/share/man/man1/
