--- a/debian/nvidia-kernel-support.install.in
+++ b/debian/nvidia-kernel-support.install.in
@@ -1,2 +1,3 @@
-debian/nvidia-load.conf		etc/#PRIVATE#/
-debian/nvidia-modprobe.conf	etc/#PRIVATE#/
+debian/nvidia-load.conf			etc/#PRIVATE#/
+debian/nvidia-modprobe.conf		etc/#PRIVATE#/
+debian/nvidia-blacklists-nouveau.conf	etc/#PRIVATE#/
