enable Breaks+Replaces against glx-alternative-nvidia
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5649 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -115,9 +115,9 @@ Provides:
  xserver-xorg-video-nvidia-any,
  ${nvidia:xorgProvides},
 Breaks:
-# glx-alternative-nvidia (<< 0.6.91),
+ glx-alternative-nvidia (<< 0.6.91),
 Replaces:
-# glx-alternative-nvidia (<< 0.6.91),
+ glx-alternative-nvidia (<< 0.6.91),
 Description: NVIDIA binary Xorg driver${nvidia:LegacyDesc}
  These binary drivers provide optimized hardware acceleration of
  OpenGL applications via a direct-rendering X Server.
@@ -321,9 +321,9 @@ Depends:
 Provides:
  ${nvidia}-kernel-support--v1,
 Breaks:
-# glx-alternative-nvidia (<< 0.6.91),
+ glx-alternative-nvidia (<< 0.6.91),
 Replaces:
-# glx-alternative-nvidia (<< 0.6.91),
+ glx-alternative-nvidia (<< 0.6.91),
 Description: NVIDIA binary kernel module support files${nvidia:LegacyDesc}
  The NVIDIA binary drivers provide optimized hardware acceleration of
  OpenGL applications via a direct-rendering X Server for graphics cards
