report nvidia-kernel-support-any info in bug reports
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5652 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -319,6 +319,7 @@ Depends:
  nvidia-modprobe,
  ${misc:Depends}
 Provides:
+ nvidia-kernel-support-any,
  ${nvidia}-kernel-support--v1,
 Breaks:
  glx-alternative-nvidia (<< 0.6.91),
