--- a/debian/libglvnd-nvidia.lintian-overrides.in
+++ b/debian/libglvnd-nvidia.lintian-overrides.in
@@ -1,9 +1,9 @@
 # The NVIDIA license does not allow any form of modification.
 [!amd64]: binary-file-built-without-LFS-support
+shlib-with-non-pic-code
 hardening-no-fortify-functions
 hardening-no-relro
 hardening-no-stackprotector
 
 # Lintian and debhelper disagree w.r.t a library in a private directory.
 postinst-has-useless-call-to-ldconfig
-postrm-has-useless-call-to-ldconfig
