--- a/debian/rules
+++ b/debian/rules
@@ -231,7 +231,7 @@ build-kernel-source-tree: install-into-tmp
 	  tar cfJ $(module_txz) \
 	    --owner=root --group=src -C $(module_source)/../.. \
 	    --exclude '*.in' --exclude '.svn' \
-	    --null -T - --no-recursion
+	    --no-recursion --null -T -
 	tar tfvJ $(module_txz)
 
 build-kernel-dkms-tree: build-kernel-source-tree
