--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -5,3 +5,4 @@ ignore_xen_on_arm.patch
 disable_nvidia_conftest.patch
 #HAS_UVM#disable_uvm_conftest.patch
 arm-outer-sync.patch
+use-kbuild-compiler.patch
