Sync patches with branches/358
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/355@5742 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -6,3 +6,4 @@ disable_nvidia_conftest.patch
 #HAS_UVM#disable_uvm_conftest.patch
 seq-printf.patch
 arm-outer-sync.patch
+use-kbuild-compiler.patch
