--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -4,5 +4,6 @@ include-swiotlb-header-on-arm.patch
 ignore_xen_on_arm.patch
 disable_nvidia_conftest.patch
 #HAS_UVM#disable_uvm_conftest.patch
+disable_modeset_conftest.patch
 arm-outer-sync.patch
 use-kbuild-compiler.patch
