nvidia-detect: fix lspci call if there are multiple NVIDIA GPUs installed
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5791 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/detect/nvidia-detect.in
+++ b/debian/detect/nvidia-detect.in
@@ -52,9 +52,10 @@ done
 
 if [ "$(echo $NV_DEVICES | wc -w)" != 1 ]; then
 	echo "Several NVIDIA GPUs detected. Checking only the first."
+	NV_DEVICES=$(echo $NV_DEVICES | awk '{ print $1 }')
 fi
 
-NVGA=$(lspci -mn -s ${NV_DEVICES%% *} | awk '{ gsub("\"",""); print $3 $4 }')
+NVGA=$(lspci -mn -s "$NV_DEVICES" | awk '{ gsub("\"",""); print $3 $4 }')
 
 else
 
