document multiple pciid usage
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5794 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/detect/nvidia-detect.in
+++ b/debian/detect/nvidia-detect.in
@@ -19,7 +19,7 @@
 #
 
 if [ "$1" = "-h" -o "$1" = "--help" ]; then
-	echo "Usage: nvidia-detect [PCIID]"
+	echo "Usage: nvidia-detect [PCIID]..."
 	echo "       Reports the Debian packages supporting the NVIDIA GPU that is"
 	echo "       installed on the local system (or given as a PCIID parameter)."
 	exit 0
