document to use update-glx
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5805 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -301,7 +301,7 @@ Description: allows the selection of NVIDIA as GLX provider
  legacy) this metapackage registers an alternative to allow easy switching
  between the different versions.
  .
- Use 'update-alternatives --config nvidia' to select a version.
+ Use 'update-glx --config nvidia' to select a version.
  .
  This package does not depend on the corresponding NVIDIA libraries.
  In order to install the NVIDIA driver and libraries, install the
