fix some imprecise bits
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/346@5819 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libgl1-nvidia-glx.symbols.in
+++ b/debian/libgl1-nvidia-glx.symbols.in
@@ -1777,6 +1777,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glShaderSourceARB@Base 1.0.6106
  glShaderStorageBlockBinding@Base 310
  glStateCaptureNV@Base 346
+#MISSING: 331# glStatePropertiesDynamicNV@Base 260
 #MISSING: 331# glStatePropertyfNV@Base 260
 #MISSING: 331# glStatePropertyiNV@Base 260
 #MISSING: 331# glStateTypeNV@Base 260
