--- a/debian/nvidia-smi.lintian-overrides.in
+++ b/debian/nvidia-smi.lintian-overrides.in
@@ -1,6 +1,6 @@
 # The NVIDIA license does not allow any form of modification.
 [!amd64]: binary-file-built-without-LFS-support
-embedded-library
+embedded-library usr/lib/#PRIVATE#/nvidia-smi: zlib
 hardening-no-fortify-functions
 hardening-no-relro
 hardening-no-stackprotector
