there is no need for directory wildcards in the lintian overrides
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5821 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libcuda1.lintian-overrides.in
+++ b/debian/libcuda1.lintian-overrides.in
@@ -1,6 +1,6 @@
 # The NVIDIA license does not allow any form of modification.
 [!amd64]: binary-file-built-without-LFS-support
-embedded-library usr/lib*/libcuda.so.#VERSION#: zlib
+embedded-library #LIBDIR#/#PRIVATE#/libcuda.so.#VERSION#: zlib
 [!armhf]: shlib-with-executable-stack
 [i386]: shlib-with-non-pic-code
 spelling-error-in-binary
