make 'm-a build nvidia' work on armhf
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340@5887 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/control.template.in
+++ b/debian/module/debian/control.template.in
@@ -8,7 +8,7 @@ Standards-Version: 3.9.0
 Homepage: http://www.nvidia.com/
 
 Package: #NVIDIA#-kernel-#KVERS#
-Architecture: i386 amd64
+Architecture: i386 amd64 armhf
 Provides: #NVIDIA#-kernel-#VERSION#
 Depends:
  nvidia-kernel-common (>= 20110213),
