--- a/debian/nvidia-modprobe.conf.in
+++ b/debian/nvidia-modprobe.conf.in
@@ -1,8 +1,8 @@
-install nvidia modprobe -i #MODULE# $CMDLINE_OPTS
+install nvidia modprobe -i #MODULE# $CMDLINE_OPTS ; modprobe -i nvidia-modeset $CMDLINE_OPTS
 
 #HAS_UVM#install nvidia-uvm modprobe nvidia ; modprobe -i #MODULE#-uvm $CMDLINE_OPTS
 
-#HAS_UVM#remove nvidia modprobe -r -i nvidia-uvm nvidia-modeset nvidia
+remove nvidia modprobe -r -i nvidia-modeset #HAS_UVM_MODPROBE# nvidia
 
 # These aliases are defined in *all* nvidia modules.
 # Duplicating them here sets higher precedence and ensures the selected
