--- a/debian/rules
+++ b/debian/rules
@@ -300,6 +300,7 @@ override_dh_strip:
 	-e 's{#LIBDIR#}{$(libdir)}g;' \
 	-e 's{#PRIVATE#}{$(nvidia_private)}g;' \
 	-e 's{#HAS_UVM#}{$(if $(has_uvm),,#)}g;' \
+	-e 's{#HAS_UVM_MODPROBE#}{$(if $(has_uvm),nvidia-uvm,)}g;' \
 	-e 's{#!armhf#}{$(if $(filter armhf,$(DEB_HOST_ARCH)),#)}g;' \
 	-e 's{#!legacy#}{$(if $(legacy),#)}g;' \
 	< $< > $@
