--- a/debian/nvidia-alternative.postinst.in
+++ b/debian/nvidia-alternative.postinst.in
@@ -44,7 +44,7 @@ if [ "$1" = "triggered" ]; then
 	slaves="
 		$(add_multiarch_slave /usr/lib nvidia/ libGL.so.1 /usr/lib #PRIVATE#/)
 		$(add_multiarch_slave /usr/lib nvidia/ libEGL.so.1 /usr/lib #PRIVATE#/)
-		$(add_multiarch_slave /usr/lib nvidia/ libEGL_nvidia.so.0 /usr/lib #PRIVATE#/)
+		$(add_multiarch_slave /usr/lib nvidia/ libEGL.so /usr/lib #PRIVATE#/)
 		$(add_multiarch_slave /usr/lib nvidia/ libGLESv1_CM.so.1 /usr/lib #PRIVATE#/)
 		$(add_multiarch_slave /usr/lib nvidia/ libGLESv2.so.2 /usr/lib #PRIVATE#/)
 		$(add_multiarch_slave /usr/lib nvidia/ libnvidia-cfg.so.1 /usr/lib #PRIVATE#/)
@@ -60,6 +60,8 @@ if [ "$1" = "triggered" ]; then
 		$(add_multiarch_slave /usr/lib "" libnvcuvid.so.1 /usr/lib #PRIVATE#/)
 		$(add_multiarch_slave /usr/lib "" libnvidia-ml.so.1 /usr/lib #PRIVATE#/)
 		$(add_multiarch_slave /usr/lib "" libOpenGL.so.0 /usr/lib #PRIVATE#/)
+		$(add_multiarch_slave /usr/lib "" libOpenGL.so /usr/lib #PRIVATE#/)
+		$(add_multiarch_slave /usr/lib "" libEGL_nvidia.so.0 /usr/lib #PRIVATE#/)
 		$(add_multiarch_slave /usr/lib "" libGLdispatch.so.0 /usr/lib #PRIVATE#/)
 		$(add_slave /usr/bin/nvidia-smi nvidia-smi /usr/lib/#PRIVATE#/nvidia-smi)
 		$(add_slave /usr/share/man/man1/nvidia-smi.1.gz nvidia-smi.1.gz /usr/lib/#PRIVATE#/nvidia-smi.1.gz)
