--- a/debian/nvidia-modprobe.conf.in
+++ b/debian/nvidia-modprobe.conf.in
@@ -2,7 +2,7 @@ install nvidia modprobe -i #MODULE# $CMDLINE_OPTS
 
 #HAS_UVM#install nvidia-uvm modprobe nvidia ; modprobe -i #MODULE#-uvm $CMDLINE_OPTS
 
-#HAS_UVM#remove nvidia modprobe -r -i nvidia-uvm nvidia
+remove nvidia modprobe -r -i #UNLOAD_MODULES#
 
 # These aliases are defined in *all* nvidia modules.
 # Duplicating them here sets higher precedence and ensures the selected
