do not run dh_strip_nondeterminism
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5962 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -301,6 +301,7 @@ override_dh_gencontrol:
 # Stripping the binary modules would constitute modifying the binary files
 # in a way other than unzipping of compressed files.
 override_dh_strip:
+override_dh_strip_nondeterminism:
 
 ############################################################################
 
