--- a/debian/rules
+++ b/debian/rules
@@ -387,7 +387,14 @@ get-orig-source:
 	    mkdir $$dir ; \
 	    mv *.run $$dir/ ; \
 	    chmod 0755 $$dir/* ; \
-	    tar cfvz ../nvidia-graphics-drivers$(legacy)_$$newversion.orig.tar.gz \
+	    latestfile=$$(ls -tr $$dir/* | tail -n 1) ; \
+	    touch $$dir -r $$latestfile ; \
+	    tarball=../nvidia-graphics-drivers$(legacy)_$$newversion.orig.tar.gz ; \
+	    tar cfvz $$tarball \
+	        --sort=name \
 		--owner=root --group=src \
-		$$dir
+		$$dir \
+		; \
+	    touch $$tarball -r $$latestfile
+	
 	rm -rf get-orig-source
