canonicalize some legacy variable names
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5966 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -31,11 +31,11 @@ legacy			 = $(if $(NVIDIA_LEGACY),-legacy-$(NVIDIA_LEGACY)xx)
 legacy_description	 = $(if $(NVIDIA_LEGACY), ($(NVIDIA_LEGACY)xx legacy version))
 perfkit			 =
 watch_pattern		 = $(or $(WATCH_PATTERN),$(if $(WATCH_VERSION),$(WATCH_VERSION)(?:\.[\d\.\-]+)?),[\d\.\-]+)
-filename_i386		 = $(NVIDIA_FILENAME_X86)
-filename_amd64		 = $(NVIDIA_FILENAME_X86_64)
+filename_i386		 = $(NVIDIA_FILENAME_i386)
+filename_amd64		 = $(NVIDIA_FILENAME_amd64)
 filename_armhf		 = $(NVIDIA_FILENAME_armhf)
-dirname_i386		 = $(NVIDIA_DIRNAME_X86)
-dirname_amd64		 = $(NVIDIA_DIRNAME_X86_64)
+dirname_i386		 = $(NVIDIA_DIRNAME_i386)
+dirname_amd64		 = $(NVIDIA_DIRNAME_amd64)
 dirname_armhf		 = $(NVIDIA_DIRNAME_armhf)
 
 # this needs the internal names (i.e. upstream's names, not our renamed files)
