--- a/debian/rules
+++ b/debian/rules
@@ -370,31 +370,40 @@ debian/files_$(NVIDIA_RELEASE)_%: NVIDIA-Linux-%
 ############################################################################
 
 PASV	?= --pasv
+CACHE	?= ../.cache
+ORIGDIR	?= nvidia-graphics-drivers-$(NVIDIA_RELEASE).orig
+TARBALL	?= nvidia-graphics-drivers$(legacy)_$(NVIDIA_RELEASE).orig.tar.gz
+
+# $1 = arch
+get_download_url	 = $(HTTPURL_PREFIX)/$(HTTPURL_ARCHDIR_$(strip $1))/$(NVIDIA_RELEASE)/$(NVIDIA_FILENAME_$(strip $1))
+
+get-orig-source-prepare:
+	$(RM) $(TARBALL)
+	$(RM) -r get-orig-source || true
+	mkdir get-orig-source
+
+get-orig-source-download-%: get-orig-source-prepare
+	ln -v $(CACHE)/$(NVIDIA_FILENAME_$*) get-orig-source/ 2>/dev/null || \
+		wget $(call get_download_url,$*) -P get-orig-source/
+	if [ -d $(CACHE) ] && [ ! -f $(CACHE)/$(NVIDIA_FILENAME_$*) ]; then \
+		ln -v get-orig-source/$(NVIDIA_FILENAME_$*) $(CACHE) ; fi
 
 .PHONY: get-orig-source
-get-orig-source:
-	rm -rf get-orig-source || true
-	mkdir get-orig-source
-	ln -v ../.cache/*-$(version).run get-orig-source/ 2>/dev/null || true
-	ln -v ../.cache/*-$(version)-*.run get-orig-source/ 2>/dev/null || true
-	uscan --no-symlink --download-current-version $(PASV) \
-	    --watchfile debian/watch --destdir get-orig-source
+get-orig-source: $(foreach a,$(ARCH_LIST),get-orig-source-download-$a)
+	#uscan --no-symlink --download-current-version $(PASV) \
+	#    --watchfile debian/watch --destdir get-orig-source
 	test $$(ls get-orig-source/* | wc -l) = $(words $(ARCH_LIST))  # we need one file per architecture
 	@set -e -x ; \
 	    cd get-orig-source ; \
-	    newversion=$$(ls *-x86-*.run | sed -e 's/.*-\([0-9.]*\)\(-.*\)\?\.run/\1/') ; \
-	    dir=nvidia-graphics-drivers-$${newversion}.orig ; \
-	    mkdir $$dir ; \
-	    mv *.run $$dir/ ; \
-	    chmod 0755 $$dir/* ; \
-	    latestfile=$$(ls -tr $$dir/* | tail -n 1) ; \
-	    touch $$dir -r $$latestfile ; \
-	    tarball=../nvidia-graphics-drivers$(legacy)_$$newversion.orig.tar.gz ; \
-	    tar cfvz $$tarball \
+	    mkdir $(ORIGDIR) ; \
+	    mv *.run $(ORIGDIR)/ ; \
+	    chmod 0755 $(ORIGDIR)/* ; \
+	    latestfile=$$(ls -tr $(ORIGDIR)/* | tail -n 1) ; \
+	    touch $(ORIGDIR) -r $$latestfile ; \
+	    tar cfvz ../$(TARBALL) \
 	        --sort=name \
 		--owner=root --group=src \
-		$$dir \
+		$(ORIGDIR) \
 		; \
-	    touch $$tarball -r $$latestfile
-	
+	    touch ../$(TARBALL) -r $$latestfile
 	rm -rf get-orig-source
